# procmod-core

./: Cargo.toml  README.md
.github/workflows/: publish.yml  test.yml
examples/: cross_bitness_child.rs  mapped_pe_identity.rs  read_only_modules.rs
src/: error.rs  lib.rs  module.rs  pe.rs  process.rs  region.rs  target.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
tests/: pe.rs  process.rs  windows_cross_bitness.rs
