[package]
name = "procmod-core"
version = "1.0.1"
edition = "2021"
description = "Cross-platform process memory read/write"
license = "MIT"
repository = "https://github.com/procmod/procmod-core"
keywords = ["memory", "process", "game", "modding"]
categories = ["os", "game-development"]

[dependencies]
thiserror = "2"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
] }
